@@ -4,3 +4,9 @@ Many thanks to:
  * Peter Bircher & Cristian Tuduce for several bug fixes
  * Mark Greenheigh for the prompt and precise bug reports
  * Jose Pedro Oliveria for the build and release fixes
+
+# File version information:
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
