@@ -41,3 +41,10 @@ Generate the man page with pod2man
 Please report any installation problem to <matteo.corti@id.ethz.ch> or
 open a ticket at
 https://trac.id.ethz.ch/projects/nagios_plugins/newticket
+
+# Version information:
+#
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
