@@ -1,3 +1,11 @@
+################################################################################
+# File version information:
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
+################################################################################
+
 =pod
 
 =head1 NAME
