@@ -96,3 +96,8 @@
 
 	* check_updates: recognizes CentOS
 
+# File version information:
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
